--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Railguru is your one-stop destination for all things train-related. Check PNR status, find train routes, book tickets, and more. Get reliable and up-to-date information for a smooth train journey.">
-    <meta name="keywords" content="PNR status, train route, book tickets, find trains, train search, Krish Patel, Railguru">
-    <meta name="author" content="Krish Patel">
+    <meta name="keywords" content="PNR status, train route, book tickets, find trains, train search, Arsh Kumar, Railguru">
+    <meta name="author" content="Arsh Kumar">
     <!-- favicon -->
     <link rel="icon" type="image/png" href="Media/icon_nbg.png">
     <!-- animate -->
